# TELEGRAM_PARSER

./: .env.example  AGENTS.md  Procfile  README.md  alerts.yml  config.py  logging_config.py  migrate.py  pyproject.toml  railway.json
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
scripts/: start-web.sh  start-worker.sh
tests/: test_auth.py  test_channels.py  test_feed_top.py  test_pipeline.py
web/: __init__.py  cache.py  crypto.py  usage.py
web/models/: __init__.py
web/routes/: accounts.py  auth.py  channels.py  feed.py  pipeline.py  qr.py  top.py  usage.py
web/ui/: __init__.py
web/ui/templates/: accounts.html  feed.html  login.html  onboarding.html  packages.html  settings.html  subscriptions.html  top.html  usage.html
worker/: __init__.py  parsing.py  topics.py
